--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,7 @@ services:
     volumes:
       - ./front:/front
     working_dir: /front
-    command: node
+    command: yarn start
     tty: true
+    ports:
+      - 3000:3000
